@@ -144,6 +144,10 @@ protected:
 	// Sets the result of this dialog, to be checked by get_result()
 	result set_result(result res);
 
+	// Sets the name of the selected game which is used to highlight
+	// the names of the players which have joined this game
+	void set_selected_game(const std::string game_name);
+
 	// Called each time the gamelist_ variable is updated. May be
 	// overridden by child classes to add custom gamelist behaviour.
 	virtual void gamelist_updated(bool silent=true);
@@ -185,6 +189,8 @@ private:
 	gui::menu users_menu_;
 
 	std::vector<std::string> user_list_;
+
+	std::string selected_game_;
 
 	result result_;
 
